Added changes in patch for D10 compatibility.

--- a/external_reset_password.info.yml
+++ b/external_reset_password.info.yml
@@ -2,5 +2,5 @@ name: 'External reset password'
 type: module
 description: 'Allow to set external URL for user reset password'
 package: User interface
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 configure: external_reset_password.settings_form
